--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
   </head>
+  <link rel="stylesheet" href="/src/assets/main.css" />
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
